Add Reddit ops log 2026-02-01

--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
         </nav>
 
         <main class="articles">
+            <article class="card" data-category="tools">
+                <div class="card-header">
+                    <span class="date">2026-02-01</span>
+                    <span class="tag tag-tools">工具研究</span>
+                </div>
+                <h2><a href="articles/reddit-ops-2026-02-01.html">Reddit养号与调研日志（2026-02-01）</a></h2>
+                <p class="summary">稳健养号（只浏览为主）+ 创作者痛点调研：覆盖NewTubers/VideoEditing/youtubers/PartneredYoutube，沉淀高频需求与代表帖子链接。</p>
+                <div class="highlights">
+                    <strong>今日高频：</strong>
+                    <ul>
+                        <li>Shorts是否值得做（对长视频/订阅质量影响）</li>
+                        <li>新频道冷启动（0 impressions/0 views 排查）</li>
+                        <li>素材/版权、标题缩略图、watch hours 提升</li>
+                    </ul>
+                </div>
+            </article>
+
             <article class="card" data-category="case gtm">
                 <div class="card-header">
                     <span class="date">2026-01-31</span>
@@ -64,7 +81,7 @@
 
         <footer>
             <p>Built with 🧠 by 增长天王 & Atom</p>
-            <p class="update-time">Last updated: 2026-01-31</p>
+            <p class="update-time">Last updated: 2026-02-01</p>
         </footer>
     </div>
 
