Rename label: 工具研究 -> 养号日记

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <article class="card" data-category="tools">
                 <div class="card-header">
                     <span class="date">2026-02-01</span>
-                    <span class="tag tag-tools">工具研究</span>
+                    <span class="tag tag-tools">养号日记</span>
                 </div>
                 <h2><a href="articles/reddit-ops-2026-02-01.html">Reddit养号与调研日志（2026-02-01）</a></h2>
                 <p class="summary">稳健养号（只浏览为主）+ 创作者痛点调研：覆盖NewTubers/VideoEditing/youtubers/PartneredYoutube，沉淀高频需求与代表帖子链接。</p>
