新增：AI工具用户定位思考（用户分类+KOC共创策略）

--- a/index.html
+++ b/index.html
@@ -19,11 +19,31 @@
             <a href="#" class="category active" data-filter="all">全部</a>
             <a href="#" class="category" data-filter="gtm">GTM策略</a>
             <a href="#" class="category" data-filter="case">案例分析</a>
+            <a href="#" class="category" data-filter="user">用户定位</a>
             <a href="#" class="category" data-filter="tools">工具研究</a>
             <a href="#" class="category" data-filter="insights">洞察思考</a>
         </nav>
 
         <main class="articles">
+            <article class="card" data-category="user gtm">
+                <div class="card-header">
+                    <span class="date">2026-02-01</span>
+                    <span class="tag tag-user">用户定位</span>
+                    <span class="tag tag-gtm">GTM策略</span>
+                </div>
+                <h2><a href="articles/user-positioning-ai-tools.html">AI 工具的用户定位思考</a></h2>
+                <p class="summary">用户不是不想用 AI，而是不知道能力边界、探索成本高。核心观察：决定用户能不能用起来的，不是认知水平，是痛点够不够痛。</p>
+                <div class="highlights">
+                    <strong>用户分类：</strong>
+                    <ul>
+                        <li>信息闭塞型 / 浅度使用型 / 被劝退型</li>
+                        <li>认知到位但想省心（倾向买服务）</li>
+                        <li>认知到位但缺工具（核心目标用户）</li>
+                    </ul>
+                    <strong>策略：</strong>KOC共创 → 找痛点和aha moment → 自发传播
+                </div>
+            </article>
+
             <article class="card" data-category="tools">
                 <div class="card-header">
                     <span class="date">2026-02-01</span>
