标签调整：工具研究→Reddit，养号日记作为文章标签

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#" class="category" data-filter="gtm">GTM策略</a>
             <a href="#" class="category" data-filter="case">案例分析</a>
             <a href="#" class="category" data-filter="user">用户定位</a>
-            <a href="#" class="category" data-filter="tools">工具研究</a>
+            <a href="#" class="category" data-filter="reddit">Reddit</a>
             <a href="#" class="category" data-filter="insights">洞察思考</a>
         </nav>
 
@@ -44,10 +44,10 @@
                 </div>
             </article>
 
-            <article class="card" data-category="tools">
+            <article class="card" data-category="reddit">
                 <div class="card-header">
                     <span class="date">2026-02-01</span>
-                    <span class="tag tag-tools">养号日记</span>
+                    <span class="tag tag-reddit">养号日记</span>
                 </div>
                 <h2><a href="articles/reddit-ops-2026-02-01.html">Reddit养号与调研日志（2026-02-01）</a></h2>
                 <p class="summary">稳健养号（只浏览为主）+ 创作者痛点调研：覆盖NewTubers/VideoEditing/youtubers/PartneredYoutube，沉淀高频需求与代表帖子链接。</p>
