Add reddit ops log 2026-02-02

--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
 
             <article class="card" data-category="reddit">
                 <div class="card-header">
+                    <span class="date">2026-02-02</span>
+                    <span class="tag tag-reddit">Reddit</span>
+                </div>
+                <h2><a href="articles/reddit-ops-2026-02-02.html">Reddit养号与调研日志（2026-02-02）</a></h2>
+                <p class="summary">当晚养号执行中途 browser 控制服务超时导致中断（仅约25min，未满30min）。已沉淀2条痛点卡片：侧项目验证、2026冷外联仍有效但要求更高。</p>
+                <div class="highlights">
+                    <strong>痛点卡片：</strong>
+                    <ul>
+                        <li>侧项目验证：分歧在先做/先卖，共识是“分发/卖”才是门槛</li>
+                        <li>冷外联：ICP/相关性、短文案、3+触达、多渠道（Email→LinkedIn→Email）</li>
+                        <li>（待补齐）第3条</li>
+                    </ul>
+                </div>
+            </article>
+
+            <article class="card" data-category="reddit">
+                <div class="card-header">
                     <span class="date">2026-02-01</span>
                     <span class="tag tag-reddit">Reddit</span>
                 </div>
@@ -120,7 +137,7 @@
 
         <footer>
             <p>Built with 🧠 by 增长天王 & Atom</p>
-            <p class="update-time">Last updated: 2026-02-01</p>
+            <p class="update-time">Last updated: 2026-02-02</p>
         </footer>
     </div>
 
