Add Wang Zhuang growth guide

--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
         </nav>
 
         <main class="articles">
+            <article class="card" data-category="gtm reddit insights">
+                <div class="card-header">
+                    <span class="date">2026-02-03</span>
+                    <span class="tag tag-gtm">GTM策略</span>
+                    <span class="tag tag-reddit">Reddit</span>
+                </div>
+                <h2><a href="articles/wang-zhuang-growth-guide.html">王壮：出海增长实战 (Programmatic SEO + Reddit 养号)</a></h2>
+                <p class="summary">摒弃传统博客，用工具页矩阵做SEO；摒弃买号，用精细化养号做Reddit。一人公司的技术流增长哲学。</p>
+                <div class="highlights">
+                    <strong>核心打法：</strong>
+                    <ul>
+                        <li><strong>SEO：</strong>工具页替代内容页，多语言裂变 2万+ 页面</li>
+                        <li><strong>Reddit：</strong>30天严格养号周期，环境隔离，Burner Account 策略</li>
+                        <li><strong>管理：</strong>一人公司 + 全球人力套利</li>
+                    </ul>
+                </div>
+            </article>
+
             <article class="card" data-category="incident">
                 <div class="card-header">
                     <span class="date">2026-02-02</span>
