Add Agent as Intern article with images

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
         </nav>
 
         <main class="articles">
+            <article class="card" data-category="insights user">
+                <div class="card-header">
+                    <span class="date">2026-02-03</span>
+                    <span class="tag tag-insights">洞察思考</span>
+                </div>
+                <h2><a href="articles/agent-as-intern.html">Agent 产品哲学：别把它当工具，当实习生带</a></h2>
+                <p class="summary">为什么你的 Agent 不好用？因为它需要 Onboarding。5 张 Notion 风格图解，阐述 Agent 的核心交互逻辑。</p>
+                <div class="highlights">
+                    <strong>核心观点：</strong>
+                    <ul>
+                        <li><strong>Paradigm Shift:</strong> 从“工具思维” (期待完美) 到 “实习生思维” (允许犯错)</li>
+                        <li><strong>Onboarding:</strong> 配置 Skills + SOUL.md + 第一次 Code Review</li>
+                        <li><strong>Memory:</strong> 拒绝黑盒，文件即记忆 (MEMORY.md)</li>
+                    </ul>
+                </div>
+            </article>
+
             <article class="card" data-category="gtm reddit insights">
                 <div class="card-header">
                     <span class="date">2026-02-03</span>
