Add Ray OpenClaw Insight

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
         </nav>
 
         <main class="articles">
+            <article class="card" data-category="insights">
+                <div class="card-header">
+                    <span class="date">2026-02-03</span>
+                    <span class="tag tag-insights">洞察思考</span>
+                </div>
+                <h2><a href="articles/ray-openclaw-insight.html">Ray 的 OpenClaw 思考：技能过载与个性化集成</a></h2>
+                <p class="summary">Open Call 会议深度复盘：工具不是越多越好，过多的 MCP 会导致路由混乱。未来的 Agent 应该是“个性化的 Skill 集成智能体”。</p>
+                <div class="highlights">
+                    <strong>核心洞察：</strong>
+                    <ul>
+                        <li><strong>Skill Overload:</strong> 太多工具导致决策瘫痪，需主动引导用户描述</li>
+                        <li><strong>New Definition:</strong> Agent = 个性化 Skill 集成智能体</li>
+                        <li><strong>Value:</strong> 价值在于“懂你且只装了你需要的 Skill”</li>
+                    </ul>
+                </div>
+            </article>
+
             <article class="card" data-category="insights user">
                 <div class="card-header">
                     <span class="date">2026-02-03</span>
